--- a/DocumentManagerUI/DocumentManagerUI.csproj
+++ b/DocumentManagerUI/DocumentManagerUI.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Blazorise" Version="0.9.5.7" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.5.7" />
     <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.5.7" />
+    <PackageReference Include="bootstrap" Version="5.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="5.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="5.0.13" PrivateAssets="all" />
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
